# ols-regression-challenge

./: README.md  eda.ipynb  experimental_modelling.ipynb  pyproject.toml  residualizer.ipynb
srag/: README.md  eda.ipynb  partial_residualizer_eda.ipynb  residualizer_eda.ipynb
