[tool.poetry]
name = "ols-regression-challenge"
version = "0.0.1"
description = "A small project for linear regression"
license = "MIT"
authors = ["Lucas Leão <heylucasleao@gmail.com>"]
keywords = ["machine-learning", "linear-regression"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.4"
scikit-learn = "^1.3.0"
ipykernel = {version = "^6.7.0"}
kaleido =  "0.2.1" 
plotly = {version = "^5.22.0"}
nbformat = {version = "^5.10.4"}
seaborn = {version = "^0.12.2"}
statsmodels = {version = "^0.13.5"}
pandas = {version = "^2.0.3"}
tinycp = "0.0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"